# django-docker

./: .dockerignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: makefile.yml
app/app/: settings.py
docker/: Dockerfile  apt_preferences  main.cf
