[tool.poetry]
name = "django-docker"
version = "0.1.0"
description = ""
authors = ["Mike Birdgeneau <mike.birdgeneau@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.5"
Django = "^4.0.6"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
